k8s/database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: db-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/db-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/db-tier: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/db-tier: "true"
        io.kompose.service: database
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: production-env-env
          image: bitnami/postgresql:latest
          name: database
          ports:
            - containerPort: 5432
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-data
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
      volumes:
        - name: database-data
          persistentVolumeClaim:
            claimName: database-data-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
